--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 body {
   height: auto;
   min-height: 100px;
-  background-color: #85A3B2; /*#5271ff;*/
+  background-color: #B0C4DE; /*#5271ff;*/
   color:#fff;
   padding-top:140px;
 }
