Change body background color to #2B2D42

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 body {
   height: auto;
   min-height: 100px;
-  background-color: #FAF8F5; /*#5271ff;*/
+  background-color: #2B2D42; /*#5271ff;*/
   color:#fff;
   padding-top:140px;
 }
